--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
-  background-image: url("../image/background.png");
+  background-image: url("../img/background.png");
   background-size: cover;
   margin: 0;
   padding: 0;
